ChangeLog for ARQ
=================
(the list covers new features and refinements.  See ASF JIRA for details of bugs fixed) 


==== Jena 2.10.0

+ Consolidation of versions numbers.

* JENA-379 : Incorrect results from a property paths with same subject and object variable.  
+ Introduce RDFParserOutput as output interface for parsers (was Sink<Triple> or Sink<Quad>)
  Assorted implementations of this new interface
+ RIOT - internal reorganisation moving to org.apache.jena.riot.
+ Remove the partial migration support for old-style SPARQL submission update forms.
+ Update Turtle/Trig parsers for prefixed name details in RDF 1.1
  Add %-sequences, \char sequences and ':' to local part of prefixed names.
  NB.  The characters 123. are now an integer 123 and a DOT; they were a decimal, and no DOT.  
+ RIOT tokenizing now records the subtokens for language and datatype literals.   
+ JENA-345 : execConstructTriples() now excludes malformed triples (e.g. literal subjects) from it's output
+ Internal reorgansiation of packages
  org.openjena.atlas moved to org.apache.jena.atlas

==== ARQ 2.9.4

+ Deprecate syntax support for SPARQL/Update (the W3C submission - this is not SPARQL 1.1 Update)
  for several cycles of migration support only.  
+ Blank node labels can not be reused across different INSERT DATA operations in the same SPARQL Update Request
  (spec clarification) 
+ JENA-322 : Make jcl-over-slf4 a required dependency
+ JENA-321 : Remove GraphStore.(start|finish)Request() (was previously deprecated)
+ Remove deprecated QueryExecutionBase.cancelAllowDrain (see JENA-93)
+ Implement SPARQL-WG decision on BIND : use original semantics. 
+ JENA-294 : improved optimization of sequeneces of OPTIONALs where the group is only OPTIONAL and an equality filter
+ JENA-298 ResultSetStAX.hasNext() can now be called again after it has returned false
+ JENA-302 Add URIs for all XQuery/Xpath F&O functions for duration accessors